# OAK

./: .gitignore  MIGRATION_GUIDE.md  README.en.md  README.md  pyproject.toml  requirements.txt  test_results_temp.md
.hypothesis/constants/: 013a70cb07fa0ab4  041fae8639109905  097468e0ea534fe0  0a60466bd50844e8  0cfa12dfbf9e9abb  136f82621348fd14  157a2f1a38b3d1d9  173763bf5492a7c9  17aea9f0b7b57258  1abf537e940ae25a  1bdebaec86efad5d  1cac7429a902cd15  1d3314747a1aebcd  1e3b6cbe894963b4  20968e49946914a6  239defdf9aafeb2c  23bf617b5f230cf7  2715c97ea36a79af  2c6e08789f342a01  2ea579ef15344094  30fff99e82e9c8ff  318cabed895e6816  35ef2d74fc921787  404d24f9376ef21c  461d118edd8cc715  4b8aedf1d55827a8  50bdda1f287fe927  546b6e3cec73be7a  5c850fe97cbf970c  5d3cf5bfdd9b0862  5ea97a7a072d950a  5ed45d2ccf245e1d  613b7567c1dbd10c  69875cfc57d575df  6c665044ff797087  6c798eb2bd5a5c06  6dd7e38f859b3ee9  71fb53fcbb685452  733a20ed6a52d704  73c58b08e3299740  (+54 more)
.hypothesis/tmp/: tmp0eep5c75  tmp18j6j537  (+41 more)
assets/: README.md
docs/: config_architecture_refactoring.md  device_discovery_refactoring.md  module_stop_method_guide.md  moving_average_filter.md
examples/: __init__.py  alias_management_example.py  config_architecture_example.py  config_dto_example.py  config_dto_simple_example.py  device_manager_example.py  display_error_handling_test.py  display_window_management_example.py  dto_example.py  event_bus_example.py  filter_config_example.py  oak_module_example.py
plan/: OAK模块重构开发计划v2.md  Tool开发计划.md  开发计划修改总结.md  模块接口计划文档.md  每日记录.md  甘蔗抓取计划.md  背压方案.md
tools/: main.py
(+400 files in other folders)
